# wander-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  railway.toml  server.json
.github/workflows/: ci.yml  publish.yml
demo/: DEMO.md  hero.tape
examples/: RECIPES.md
src/wander_agent/: __init__.py  server.py
src/wander_agent/data/: points_data.py
src/wander_agent/tools/: __init__.py  activities.py  advisory.py  aurora.py  budget.py  cheapest_month.py  cost_of_living.py  currency.py  destination.py  events.py  fare_calendar.py  fare_watch.py  flight_carbon.py  flights.py  ground_transport.py  health.py  hotels.py  inspiration.py  itinerary.py  jetlag.py  local_sim.py  meetup.py  mistake_fares.py  nomad_score.py  open_jaw.py  package.py  packing.py  passport_power.py  phrasebook.py  places.py  points.py  profile.py  restaurants.py  score.py  seasons.py  skiplagged.py  split_ticket.py  stopover.py  transit_visa.py  travel_news.py  (+5 more)
src/wander_agent/utils/: __init__.py  airport_data.py  config.py  cost_data.py  freshness.py  http.py  kiwi_client.py  profile_store.py  trip_store.py  watch_store.py
tests/: conftest.py  test_adds.py  test_airport_data.py  test_flights.py  test_ground_transport.py  test_integration.py  test_points.py  test_profile.py  test_server.py  test_visa.py
