[project]
name = "wander-agent"
version = "0.1.1"
description = "AI travel agent MCP server - search flights, hotels, plan itineraries, optimize budgets. Import into Claude or any MCP-compatible AI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Viraj Mishra" },
]
keywords = ["mcp", "travel", "agent", "flights", "hotels", "itinerary", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.27.0",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "fast-flights>=2.2",
    "primp>=0.15.0,<1.0",
    "fast-hotels>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
wander-agent = "wander_agent.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wander_agent"]
